[gd_scene load_steps=4 format=3 uid="uid://b0jyml24mbm0j"]

[ext_resource type="Script" path="res://player/player_ship.gd" id="1_h8knh"]
[ext_resource type="Texture2D" uid="uid://bge82p08x3101" path="res://assets/art/ship.png" id="1_xq8i2"]
[ext_resource type="Script" path="res://components/Hurtbox.gd" id="5_q62q5"]

[node name="PlayerShip" type="CharacterBody2D"]
collision_layer = 4
motion_mode = 1
script = ExtResource("1_h8knh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_xq8i2")
offset = Vector2(0, -3)
flip_v = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(0, -3)
polygon = PackedVector2Array(-8, -8, 13, 3, -8, 8)

[node name="BulletSpawnMarker" type="Marker2D" parent="CollisionPolygon2D"]
position = Vector2(12, 3)

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2(0, -3)
collision_layer = 8
collision_mask = 0
script = ExtResource("5_q62q5")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hurtbox"]
polygon = PackedVector2Array(-7, -5, 9, 2, -7, 6)

[node name="ShipBulletCooldown" type="Timer" parent="."]
process_callback = 0
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="ShipBulletCooldown" to="." method="_on_ship_bullet_cooldown_timeout"]
